# -Storage

./: .dockerignore  .example.env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: alembic.ini  config.py  database.py  main.py
src/migrations/: env.py
src/migrations/versions/: 498f1e5ea1bf_.py  6553a3ebbbe2_.py  db76b0ac3e57_.py
src/storage/: exceptions.py  router.py
src/storage/models/: orders.py  products.py
src/storage/schemas/: orders.py  products.py  swagger.py
src/storage/urls/: orders.py  products.py
src/storage/views/: orders.py  products.py
